@@ -1,4 +1,4 @@
-.Dd July 13, 2014
+.Dd July 29, 2014
 .Dt lnkinfo
 .Os liblnk
 .Sh NAME
@@ -41,7 +41,7 @@ None
 .Sh EXAMPLES
 .Bd -literal
 # lnkinfo Calculator.lnk
-lnkinfo 20140713
+lnkinfo 20140729
 
 Windows Shortcut information:
 	Contains a link target identifier
@@ -56,7 +56,7 @@ Link information:
 	File size			: 114688 bytes
 	File attribute flags		: 0x00000020
 		Should be archived (FILE_ATTRIBUTE_ARCHIVE)
-	Drive type			: Fixed (0x00000003)
+	Drive type			: Fixed (3)
 	Drive serial number		: 0xc868f004
 	Volume label			: System
 	Local path			: C:\WINDOWS\system32\calc.exe
