@@ -52,6 +52,9 @@ Bindings:
 * .net
 * java
 
+20140729
+* small changes in lnkinfo output
+
 20140723
 * worked on dpkg debug packages support
 
